# morphology-processing

./: README.md  document.docx  program.py  pyproject.toml
db/: ID00013_GL.tif  ID00136_GL.tif  ID00325_GL.tif  ID00433_GL.tif  ID00447_GL.tif
